# simconfig

./: .gitignore  README.md  pyproject.toml  setup.py
examples/: example_matlab.m  example_python.py
src/: launchers.py  main.py  read_file.py  sim_files.py  simconfig.py  slurm_files.py
src/simconfig/: launchers.py  main.py  read_file.py  sim_files.py  simconfig_variables.py  slurm_files.py
test/: test.py
